test/files/neg/for-comprehension-val.check
for-comprehension-val.scala:5: error: `val` keyword in for comprehension is unsupported: instead, bind the value without `val`
  for (x <- 1 to 5 ; val y = x) yield x+y       // fail
                           ^
for-comprehension-val.scala:6: error: `val` keyword in for comprehension is unsupported: just remove `val`
  for (val x <- 1 to 5 ; y = x) yield x+y       // fail
             ^
for-comprehension-val.scala:7: error: `val` keyword in for comprehension is unsupported: just remove `val`
  for (val x <- 1 to 5 ; val y = x) yield x+y   // fail
             ^
for-comprehension-val.scala:7: error: `val` keyword in for comprehension is unsupported: instead, bind the value without `val`
  for (val x <- 1 to 5 ; val y = x) yield x+y   // fail
                               ^
for-comprehension-val.scala:10: error: `val` keyword in for comprehension is unsupported: instead, bind the value without `val`
  for (z <- 1 to 2 ; x <- 1 to 5 ; val y = x) yield x+y       // fail
                                         ^
for-comprehension-val.scala:11: error: `val` keyword in for comprehension is unsupported: just remove `val`
  for (z <- 1 to 2 ; val x <- 1 to 5 ; y = x) yield x+y       // fail
                           ^
for-comprehension-val.scala:12: error: `val` keyword in for comprehension is unsupported: just remove `val`
  for (z <- 1 to 2 ; val x <- 1 to 5 ; val y = x) yield x+y   // fail
                           ^
for-comprehension-val.scala:12: error: `val` keyword in for comprehension is unsupported: instead, bind the value without `val`
  for (z <- 1 to 2 ; val x <- 1 to 5 ; val y = x) yield x+y   // fail
                                             ^
8 errors found
